unpackaged/main/default/objects/Sinistre__c/Sinistre__c.object-meta.xml
<CustomObject>
    <description>Permet de suivre l’ensemble des sinistres créés dans Igloo sur le parc.</description>
    <label>Sinistre</label>
    <nameField>
        <displayFormat>SIN-{0000}</displayFormat>
        <label>Numéro sinistre</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sinistres</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>