unpackaged/main/default/objects/Sinistre__c/fields/Agence__c.field-meta.xml
<CustomField>
    <fullName>Agence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agence</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Agence PF</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sinistres (Agence)</relationshipLabel>
    <relationshipName>Sinistres1</relationshipName>
    <type>Lookup</type>
</CustomField>