unpackaged/main/default/objects/Sinistre__c/fields/Avec_Assurance__c.field-meta.xml
<CustomField>
    <fullName>Avec_Assurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Avec assurance</label>
    <type>Checkbox</type>
</CustomField>