unpackaged/main/default/objects/Sinistre__c/fields/Choc_Arriere__c.field-meta.xml
<CustomField>
    <fullName>Choc_Arriere__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Choc Arrière</label>
    <type>Checkbox</type>
</CustomField>