unpackaged/main/default/objects/Sinistre__c/fields/Code_PF__c.field-meta.xml
<CustomField>
    <fullName>Code_PF__c</fullName>
    <formula>Parc__r.Code_PF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code PF</label>
    <type>Text</type>
</CustomField>