unpackaged/main/default/objects/Sinistre__c/fields/Conducteur_Identifie__c.field-meta.xml
<CustomField>
    <fullName>Conducteur_Identifie__c</fullName>
    <label>Conducteur identifié</label>
    <length>255</length>
    <type>Text</type>
</CustomField>