unpackaged/main/default/objects/Sinistre__c/fields/Date_Derniere_MAJ__c.field-meta.xml
<CustomField>
    <fullName>Date_Derniere_MAJ__c</fullName>
    <label>Date dernière mise à jour</label>
    <type>Date</type>
</CustomField>