unpackaged/main/default/objects/Sinistre__c/fields/Date_Ouverture__c.field-meta.xml
<CustomField>
    <fullName>Date_Ouverture__c</fullName>
    <label>Date d’ouverture</label>
    <type>Date</type>
</CustomField>