unpackaged/main/default/objects/Sinistre__c/fields/Date_Premiere_MEC__c.field-meta.xml
<CustomField>
    <fullName>Date_Premiere_MEC__c</fullName>
    <formula>Parc__r.Date_IMMAT__c</formula>
    <label>Date 1ere MEC</label>
    <type>Date</type>
</CustomField>