unpackaged/main/default/objects/Sinistre__c/fields/Date_Sinistre__c.field-meta.xml
<CustomField>
    <fullName>Date_Sinistre__c</fullName>
    <label>Date du sinistre</label>
    <type>DateTime</type>
</CustomField>