unpackaged/main/default/objects/Sinistre__c/fields/Derniere_MAJ_par__c.field-meta.xml
<CustomField>
    <fullName>Derniere_MAJ_par__c</fullName>
    <label>Dernière MAJ par</label>
    <length>255</length>
    <type>Text</type>
</CustomField>