unpackaged/main/default/objects/Sinistre__c/fields/Evaluation_Dommages__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Dommages__c</fullName>
    <label>Evaluation dommages</label>
    <length>100</length>
    <type>Text</type>
</CustomField>