unpackaged/main/default/objects/Sinistre__c/fields/Expertise__c.field-meta.xml
<CustomField>
    <fullName>Expertise__c</fullName>
    <label>Expertise</label>
    <length>100</length>
    <type>Text</type>
</CustomField>