unpackaged/main/default/objects/Sinistre__c/fields/Montant_Sinistre__c.field-meta.xml
<CustomField>
    <fullName>Montant_Sinistre__c</fullName>
    <label>Montant sinistre</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>