unpackaged/main/default/objects/Sinistre__c/fields/N_Assureur__c.field-meta.xml
<CustomField>
    <fullName>N_Assureur__c</fullName>
    <label>N° assureur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>