unpackaged/main/default/objects/Sinistre__c/fields/N_Sinistre_Igloo__c.field-meta.xml
<CustomField>
    <fullName>N_Sinistre_Igloo__c</fullName>
    <label>N° Sinistre Igloo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>