unpackaged/main/default/objects/Sinistre__c/fields/Nom_Conducteur__c.field-meta.xml
<CustomField>
    <fullName>Nom_Conducteur__c</fullName>
    <label>Nom du conducteur</label>
    <length>100</length>
    <type>Text</type>
</CustomField>