unpackaged/main/default/objects/Sinistre__c/fields/Ouvert_par__c.field-meta.xml
<CustomField>
    <fullName>Ouvert_par__c</fullName>
    <label>Ouvert par</label>
    <length>255</length>
    <type>Text</type>
</CustomField>