unpackaged/main/default/objects/Sinistre__c/fields/Parc__c.field-meta.xml
<CustomField>
    <fullName>Parc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parc</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset.RecordTypeId</field>
            <operation>equals</operation>
            <value>Parc</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Sinistres</relationshipLabel>
    <relationshipName>Sinistres</relationshipName>
    <type>Lookup</type>
</CustomField>