unpackaged/main/default/objects/Sinistre__c/fields/Police__c.field-meta.xml
<CustomField>
    <fullName>Police__c</fullName>
    <label>Police(s)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>