unpackaged/main/default/objects/Sinistre__c/fields/Respect_Contrat__c.field-meta.xml
<CustomField>
    <fullName>Respect_Contrat__c</fullName>
    <label>Respect contrat</label>
    <length>100</length>
    <type>Text</type>
</CustomField>