unpackaged/main/default/objects/Sinistre__c/fields/Sinistre_Choc_Enhauteur__c.field-meta.xml
<CustomField>
    <fullName>Sinistre_Choc_Enhauteur__c</fullName>
    <label>Sinistre choc en hauteur</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>