unpackaged/main/default/objects/Sinistre__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <length>100</length>
    <type>Text</type>
</CustomField>