unpackaged/main/default/objects/Sinistre__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Client__c</columns>
    <columns>Parc__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Date_Heure_Sinistre__c</columns>
    <columns>N_Sinistre_Igloo__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>